--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string-array
+        name="item_type_names">
+        <item>Sword</item>
+        <item>Armor</item>
+        <item>Shield</item>
+        <item>Helmet</item>
+        <item>Ring</item>
+        <item>Amulet</item>
+    </string-array>
+
 </resources>
